--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="fullscreen">
     <div class="container">
         <h1 class="title">Meus Horários</h1>
-        <a href="/horarios-aula.html">Horários das aulas</a>
+        <h3><a href="/horarios-aula.html">Horários das aulas</a></h3>
     </div>
 </body>
 </html>
