--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <body class="fullscreen">
     <div class="container">
+        
         <h1 class="title">Meus Horários</h1>
-        <h3><a href="/horarios-aula.html">Horários das aulas</a></h3>
+        <h3><a href="/horarios-aula.html"><button>Horários de Aula</button></a></h3>
+        <h3><a href="/horarios-pe.html"><button>Horários de P.E</button></a></h3>
     </div>
 </body>
 </html>
