--- a/horarios-pe.html
+++ b/horarios-pe.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body class="fullscreen">
     <div class="container">
         <h3><a href="/"><button class="botao-voltar">←</button></a></h3>
-        <table >
+        <table>
             <tr>
-                <th>Horário</h3></th>
-                <th>Segunda-feira</h3></th>
-                <th>Terça-feira</h3></th>
-                <th>Quarta-feira</h3></th>
-                <th>Quinta-feira</h3></th>
-                <th>Sexta-feira</h3></th>
+                <th>Horário</h3>
+                </th>
+                </th>
+                <th>Segunda-feira</h3>
+                </th>
+                <th>Terça-feira</h3>
+                </th>
+                <th>Quarta-feira</h3>
+                </th>
+                <th>Quinta-feira</h3>
+                </th>
+                <th>Sexta-feira</h3>
+                </th>
+
             </tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">07:00 - 07:45</td>
                 <td></td>
+                <td>P.E Arte 2/P.E Física 6</td>
+                <td>P.E Matemática</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>P.E Física 5</td>
             </tr>
             <tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">07:45 - 08:30</td>
                 <td></td>
+                <td>P.E Arte 2/P.E Física 6</td>
+                <td>P.E Matemática</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>P.E Física 5</td>
             </tr>
             <tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">08:30 - 09:15</td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td>P.E Física 6</td>
+                <td>P.E Matemática</td>
                 <td></td>
                 <td></td>
             </tr>
@@ -50,26 +60,26 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td>P.E PDM/P.E Arte 2</td>
+                <td>P.E PTAS 3</td>
             </tr>
             <tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">10:10 - 10:55</td>
                 <td></td>
                 <td></td>
-                <td>Gerência e Configurações de Serviços de Internet - EAD</td>
                 <td></td>
-                <td></td>
+                <td>P.E PDM/P.E Arte 2</td>
+                <td>P.E PTAS 3</td>
             </tr>
             <tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">10:55 - 11:40</td>
                 <td></td>
                 <td></td>
-                <td>PTAS - EAD</td>
                 <td></td>
-                <td></td>
+                <td>P.E PDM/P.E Arte 2</td>
+                <td>P.E PTAS 3</td>
             </tr>
             <tr>
             <tr>
@@ -83,51 +93,51 @@
             <tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">13:00 - 13:45</td>
-                <td>História 4</td>
-                <td>Língua Portuguesa e Literatura Brasileira 6</td>
-                <td>Matemática 6</td>
-                <td>Redes de Computadores</td>
-                <td>Segurança da Informação</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">13:45 - 14:30</td>
-                <td>História 4</td>
-                <td>Matemática 6</td>
-                <td>Matemática 6</td>
-                <td>Redes de Computadores</td>
-                <td>Segurança da Informação</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">14:30 - 15:15</td>
-                <td>Língua Portuguesa e Literatura Brasileira 6</td>
-                <td>Física 6</td>
-                <td>Gerência e Configurações de Serviços de Internet</td>
-                <td>Redes de Computadores</td>
-                <td>Segurança da Informação</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">15:25 - 16:10</td>
-                <td>Língua Portuguesa e Literatura Brasileira 6</td>
-                <td>Física 6</td>
-                <td>Gerência e Configurações de Serviços de Internet</td>
-                <td>PTAC</td>
-                <td>Gerência e Configurações de Serviços de Internet</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">16:10 - 16:55</td>
-                <td>Arte 2</td>
-                <td>Estatística</td>
-                <td>PTAS</td>
-                <td>PTAC</td>
-                <td>PDM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td style="background-color: rgb(250, 249, 209);">16:55 - 17:40</td>
-                <td>Arte 2</td>
-                <td>Estatística</td>
-                <td>PTAS</td>
-                <td>PTAC</td>
-                <td>PDM</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </table>
     </div>
