correções do professor

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="white" />
     <link rel="apple-touch-icon" href="images/pwa-icon-256.png" />
-    <script src="js/main.js"></script>
 </head>
 <body class="fullscreen">
     <div class="container">
         
         <h1 class="title">Meus Horários</h1>
-        <h3><a href="/horarios-aula.html"><button>Horários de Aula</button></a></h3>
-        <h3><a href="/horarios-pe.html"><button>Horários de P.E</button></a></h3>
+        <h3><a href="horarios-aula"><button>Horários de Aula</button></a></h3>
+        <h3><a href="horarios-pe"><button>Horários de P.E</button></a></h3>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
